# remotegamepad-server

./: .gitignore  Cargo.toml  README.md  requirements.txt
.github/workflows/: main.yml  release.yml
src/: main.py  main.rs
