[package]
name = "remotegamepad-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
enigo = "0.0.14"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
ws = "0.9.2"
